[package]
name = "Hyrule"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

# Templates
askama = "0.12"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["serde"] }
blake3 = "1.5"
hex = "0.4"
pulldown-cmark = "0.9"
# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
regex = "1.10"
lazy_static = "1.4"

url = "2.5"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Rate limiting
tower_governor = "0.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Git storage
flate2 = "1.0"
walkdir = "2.5"
base64 = "0.22"
urlencoding = "2.1"
anyhow = "1.0.100"

# Random number generation
rand = "0.8"
subtle = "2.6.1"
